external-crates/move/crates/move-compiler/tests/sui_mode/one_time_witness/init_unbound_type.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: sui
  edition: legacy
  lint: false
---
error[E03002]: unbound module
  ┌─ tests/sui_mode/one_time_witness/init_unbound_type.move:2:20
  │
2 │     fun init(_ctx: who::TxContext) {}
  │                    ^^^ Unbound module alias 'who'

error[E03004]: unbound type
  ┌─ tests/sui_mode/one_time_witness/init_unbound_type.move:7:17
  │
7 │     fun init(_: Who, _ctx: &mut sui::tx_context::TxContext) {}
  │                 ^^^ Unbound type 'Who' in current scope
